# rusty_bash

./: .gitignore  .sushrc  .sushrc_for_linux  Cargo.toml  LICENSE  README.md  README_WSL2.md  RELEASE.md  ]:q  a  build.rs  error  hoge  log  nanika_log  test.bash
docs/: SETUP_BASH_COMPLETION.md
i18n/: ar.ftl  da.ftl  de.ftl  el.ftl  en.ftl  es.ftl  fi.ftl  fr.ftl  hi.ftl  it.ftl  ja.ftl  ko.ftl  nl.ftl  no.ftl  pl.ftl  pt.ftl  ru.ftl  sl.ftl  sv.ftl  sw.ftl  uk.ftl  zh.ftl
src/: .child.rs.swp  .core.rs.swp  .elem_arg.rs.swp  .elem_redirect.rs.swp  .elem_setvars.rs.swp  .feeder.rs.swp  .main.rs.swp  .parser_args.rs.swp  .scanner.rs.swp  .signal.rs.swp  .utils.rs.swp  .utils_io.rs.swp  :  :q  :w  a  abst_arg_elem.rs  abst_command_elem.rs  abst_elem_argelem.rs  abst_elems.rs  abst_hand_input_unit.rs  abst_list_elem.rs  abst_script_elem.rs  arg_elements.rs  arg_elems.rs  bash_elements.rs  bash_glob.rs  bash_parser.rs  calculator.rs  child.rs  codec.rs  command.rs  core.rs  core_builtins.rs  core_shopts.rs  data.rs  debuginfo.rs  debuginfo.rss  elem_arg.rs  elem_arg.rss  (+77 more)
test/: .bashrc  .test.bash.swp  .test_parameters.bash.swp  1  README  bash_genuine_test  brace.bash  builtins.bash  error  lineno.bash  lineno.sush  ng.bashrc  ok  ok_bashrc  old_test.bash  out  rusty_bashrc  script.sush  test.bash  test_ansi_c_quoting.bash  test_brace.bash  test_builtins.bash  test_calculation.bash  test_case.bash  test_compound.bash  test_fixed.bash  test_future.bash  test_glob.bash  test_if.bash  test_issues.bash  test_job.bash  test_jobs.bash  test_options.bash  test_others.bash  (+7 more)
(+465 files in other folders)
