[package]
name = "sush"
version = "2026.3.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nix = { version = "0.28.0", features = ["fs", "process", "signal", "term", "user", "hostname"]}
termion = "4.0.3"
unicode-width = "0.1.11"
signal-hook = "0.3.17"
rev_lines = "0.3.0"
