[package]
name = "sush"
version = "2026.3.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nix = { version = "0.29.0", features = ["fs", "process", "signal", "term", "user", "hostname"]}
termion = "4.0.6"
unicode-width = "0.2.2"
signal-hook = "0.3.18"
rev_lines = "0.3.0"
